# playground

./: .gitignore  .gitmodules
aarchi/: build.gradle.kts  docker-compose.1.yaml  docker-compose.yaml  settings.gradle.kts  start.sh
app-kafka/: README.md  pom.xml
audio-streaming/: build.gradle  settings.gradle
aws-cli-docker/: Dockerfile
aws-s3/: testa.js
bash/: WTF  allargs  allstar  args.sh  args2  arrays.sh  atstar  awhile  awhile2  bash.txt  change  env.sh  fn  fn2  fnmax  foreach  foreach_from_curl  if-WTF  if-WTF2  lsum.sh  lsumo.sh  lsump.sh  mycopy  myscript  no-WTF1  no-WTF2  no-WTF3  no-WTF4  no-WTF5  no-WTF6  no-WTF7  number_padding  pipe_grep  readls  rename  rpn1  rpn2  rpn3  sayit  secondsh  (+6 more)
buffer-pool/: README.md  build.gradle  settings.gradle
database-transaction/: build.gradle  settings.gradle
docker-nginx-proxy/: nginx.conf  openresty.conf  openresty1.conf  run-nginx.sh  run-openresty.sh
docker-openfire/: docker-compose.yml  kill.sh  run.sh
docker-rust/: Dockerfile
docker-spark/: Dockerfile  bootstrap.sh
eventsourcing/: build.gradle  settings.gradle
future/: settings.gradle
go-mongo/: mongo.go
golang/: Interface.go  Pointers.go  dealers.txt  function_variadic.go  functions-defer.go
gradle-profile/: README.md  build.gradle  gradle.properties  settings.gradle
haproxy-ws/: README.md  build.gradle  haproxy.cfg  run_syslog.sh  settings.gradle
rust-actix-jsonpath-bench/: Cargo.toml
rust-actix-jsonpath-bench/src/: main.rs
rust-wasm/: Cargo.toml  emcc_linker
rust-wasm/.cargo/: config
rust-wasm/src/: main.rs
(+997 files in other folders)
