[package]
name = "tetris"
version = "0.1.0"
authors = ["freestrings <freestrings@gmail.com>"]

[dependencies]
piston = "0.32"
piston2d-graphics = "0.21"
piston2d-opengl_graphics = "0.43"
pistoncore-sdl2_window = "0.42"
rand = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
emscripten-sys = "0.3"
